--- a/src/style/showTrans.css
+++ b/src/style/showTrans.css
@@ -110,6 +110,7 @@ h2::before{
     right: 0;
     width: 5px;
     height: 100%;
+    border-radius: 5px;
 }
 .record.in::after{
     background: #39A97C;
