--- a/src/style/formData.css
+++ b/src/style/formData.css
@@ -5,6 +5,7 @@ form{
     flex-direction: column;
     gap: 1rem;
     border: 1px solid gray;
+    border-radius: 5px;
 }
 form input,
 form select{
